--- a/todo-app/angular.json
+++ b/todo-app/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "c6e67ae0-ed7b-4f18-8b19-35abd0208d1e"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
